--- a/test/fixtures/part_of_speeches.yml
+++ b/test/fixtures/part_of_speeches.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
+  language: 
+  value: MyString
   description: MyString
 
 two:
-  name: MyString
+  language: 
+  value: MyString
   description: MyString
