updated fixtures, just run rake db:fixtures:load to load 'em

--- a/test/fixtures/part_of_speeches.yml
+++ b/test/fixtures/part_of_speeches.yml
@@ -35,11 +35,11 @@ interjection:
   value: int.
   description: interjection
 nom:
-  language: français
+  language: french
   value: n.
   description: nom
 pronom:
-  language: english
+  language: french
   value: pro.
   description: pronom
 adjectif:
